--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -37,17 +37,17 @@
             <keyboard-shortcut keymap="Mac OS X" first-keystroke="control 1" replace-all="true"/>
             <keyboard-shortcut keymap="Mac OS X 10.5+" first-keystroke="control 1" replace-all="true"/>
         </action>
-        <action id="JsonFormat" class="com.lixiang.car.decodecohttp.decodecohttp.action.JsonFormatAction"
-                text="JsonFormat" description="格式化JSON数据" icon="Icons.JsonFormatIcon">
-            <add-to-group group-id="NavBarToolBar" relative-to-action="RunAnything" anchor="before"/>
-            <keyboard-shortcut keymap="$default" first-keystroke="control 2"/>
-            <keyboard-shortcut keymap="Mac OS X" first-keystroke="control 2" replace-all="true"/>
-            <keyboard-shortcut keymap="Mac OS X 10.5+" first-keystroke="control 2" replace-all="true"/>
-        </action>
+<!--        <action id="JsonFormat" class="com.lixiang.car.decodecohttp.decodecohttp.action.JsonFormatAction"-->
+<!--                text="JsonFormat" description="格式化JSON数据" icon="Icons.JsonFormatIcon">-->
+<!--            <add-to-group group-id="NavBarToolBar" relative-to-action="RunAnything" anchor="before"/>-->
+<!--            <keyboard-shortcut keymap="$default" first-keystroke="control 2"/>-->
+<!--            <keyboard-shortcut keymap="Mac OS X" first-keystroke="control 2" replace-all="true"/>-->
+<!--            <keyboard-shortcut keymap="Mac OS X 10.5+" first-keystroke="control 2" replace-all="true"/>-->
+<!--        </action>-->
         <action id="NewClassAction" class="com.lixiang.car.decodecohttp.decodecohttp.action.NewClassAction"
                 text="NewClassAction" description="根据JSON解析出DataClass">
             <add-to-group group-id="NewGroup" anchor="before" relative-to-action="NewFile"/>
-            <keyboard-shortcut keymap="$default" first-keystroke="ctrl 2"/>
+            <keyboard-shortcut keymap="$default" first-keystroke="meta alt B"/>
         </action>
     </actions>
 </idea-plugin>
