--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -1,20 +1,20 @@
 <!-- Plugin Configuration File. Read more: https://plugins.jetbrains.com/docs/intellij/plugin-configuration-file.html -->
 <idea-plugin>
     <!-- Unique identifier of the plugin. It should be FQN. It cannot be changed between the plugin versions. -->
-    <id>com.lixiang.car.decodeCohttp.decodeCohttp</id>
+    <id>com.lixiang.car.happytools</id>
 
     <!-- Public plugin name should be written in Title Case.
          Guidelines: https://plugins.jetbrains.com/docs/marketplace/plugin-overview-page.html#plugin-name -->
-    <name>DecodeCohttp</name>
+    <name>HappyTools</name>
 
     <!-- A displayed Vendor name or Organization ID displayed on the Plugins Page. -->
-    <vendor email="weisifan@lixiang.com" url="https://www.lixiang.com">理想汽车</vendor>
+    <vendor email="weisifan@lixiang.com" url="https://www.lixiang.com">liAuto</vendor>
 
     <!-- Description of the plugin displayed on the Plugin Page and IDE Plugin Manager.
          Simple HTML elements (text formatting, paragraphs, and lists) can be added inside of <![CDATA[ ]]> tag.
          Guidelines: https://plugins.jetbrains.com/docs/marketplace/plugin-overview-page.html#plugin-description -->
     <description><![CDATA[
-    解析cohttp的response数据<br>
+    ❤周末一个人❤，🔞老婆不在家🔞。偷偷解bug，快打开，研发百宝箱<br>
   ]]></description>
 
     <!-- Product and plugin compatibility requirements.
@@ -25,25 +25,10 @@
     <!-- Extension points defined by the plugin.
          Read more: https://plugins.jetbrains.com/docs/intellij/plugin-extension-points.html -->
     <extensions defaultExtensionNs="com.intellij">
-        <toolWindow factoryClass="com.lixiang.car.decodecohttp.decodecohttp.toolswindow.DCToolsWindowFactory"
-                    id="DecodeCohttp" anchor="right" secondary="false"/>
+
     </extensions>
 
     <actions>
-        <action id="DecodeCohttp" class="com.lixiang.car.decodecohttp.decodecohttp.action.EditorAction"
-                text="DecodeCohttp" description="解析cohttp返回数据">
-            <add-to-group group-id="ConsoleEditorPopupMenu" anchor="first"/>
-            <keyboard-shortcut keymap="$default" first-keystroke="control 1"/>
-            <keyboard-shortcut keymap="Mac OS X" first-keystroke="control 1" replace-all="true"/>
-            <keyboard-shortcut keymap="Mac OS X 10.5+" first-keystroke="control 1" replace-all="true"/>
-        </action>
-<!--        <action id="JsonFormat" class="com.lixiang.car.decodecohttp.decodecohttp.action.JsonFormatAction"-->
-<!--                text="JsonFormat" description="格式化JSON数据" icon="Icons.JsonFormatIcon">-->
-<!--            <add-to-group group-id="NavBarToolBar" relative-to-action="RunAnything" anchor="before"/>-->
-<!--            <keyboard-shortcut keymap="$default" first-keystroke="control 2"/>-->
-<!--            <keyboard-shortcut keymap="Mac OS X" first-keystroke="control 2" replace-all="true"/>-->
-<!--            <keyboard-shortcut keymap="Mac OS X 10.5+" first-keystroke="control 2" replace-all="true"/>-->
-<!--        </action>-->
         <action id="NewClassAction" class="com.lixiang.car.decodecohttp.decodecohttp.action.NewClassAction"
                 text="NewClassAction" description="根据JSON解析出DataClass">
             <add-to-group group-id="NewGroup" anchor="before" relative-to-action="NewFile"/>
