--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -26,7 +26,7 @@
          Read more: https://plugins.jetbrains.com/docs/intellij/plugin-extension-points.html -->
     <extensions defaultExtensionNs="com.intellij">
         <toolWindow factoryClass="com.lixiang.car.happytools.tools.toolswindowfactory.DiagramToolWindow"
-                    id="happyTools" anchor="right" secondary="false"/>
+                    id="HappyTools" anchor="right" secondary="false"/>
     </extensions>
 
     <actions>
